Fix layout issue by adjusting right positioning in audio home CSS

--- a/static/css/audio/home.css
+++ b/static/css/audio/home.css
@@ -110,7 +110,7 @@
      position: absolute;
      top: 100%;
      left: 0;
-     right: 64px;
+     right: 0;
      background: #1a1a1a;
      border: 1px solid #303030;
      border-top: none;
